перенес классы по пакетам + поправил остальные замечания